--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 authors = ["T <timonpost@hotmail.nl>"]
 
 [dependencies]
-[target.'cfg(target_os = "windows")'.dependencies]
+[target.'cfg(windows)'.dependencies]
 winapi = "0.2.8"
 kernel32-sys = "0.2.1"
 
-[[bin]]
-name="a"
-path="examples\\bin.rs"
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
 
 
