Added RGB and curstom ANSI value support, and tested resize terminal, safe and restore cursor position for unix terminals. And added options put attributes on font.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ winapi = { version = "0.3", features = ["winbase","winuser","consoleapi","proces
 libc = "0.2"
 
 [[bin]]
-name = "a"
+name = "example_bin"
 path = "./examples/bin.rs"
 
 
