Resolve all errors unix. Now it is time to test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,10 @@ libc = "0.2"
 termios = "0.3.0"
 
 
+[lib]
+name = "crossterm"
+path = "src/lib.rs"
 
 [[bin]]
-name = "a"
-path = "examples//bin.rs"
-
-
-
+name = "crosstermexamples"
+path = "examples/bin.rs"
