Moved files around. Added duplex example (broken). Broke alternate screen trying to add  compat.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,14 @@ termios = "0.3.0"
 name = "crossterm"
 path = "src/lib.rs"
 
-[[bin]]
- name = "example_bin"
- path = "./examples/Crossterm 0.3.1/bin.rs"
+#[[bin]]
+# name = "example_bin"
+# path = "./examples/Crossterm 0.3.1/bin.rs"
+
+[[example]]
+name = "simple"
+path = "examples/simple.rs"
+
+[[example]]
+name = "duplex"
+path = "examples/duplex.rs"
