some examples fixed added multy threaded logging example and tested input and changed styling system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,9 @@ name = "simple"
 path = "examples/simple.rs"
 
 [[example]]
+name = "logging"
+path = "examples/program_examples/logging.rs"
+
+[[example]]
 name = "duplex"
-path = "examples/duplex.rs"
+path = "examples/program_examples/duplex.rs"
