--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ exclude = ["target", "Cargo.lock"]
 readme = "README.md"
 
 [dependencies]
-
+lazy_static = "1.1.0"
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winbase","winuser","consoleapi","processenv","wincon", "handleapi"] }
 
