--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,21 +11,16 @@ exclude = ["target", "Cargo.lock"]
 readme = "README.md"
 
 [dependencies]
-lazy_static = "1.1.0"
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winbase","winuser","consoleapi","processenv","wincon", "handleapi"] }
+winapi = { version =  "0.3.5", features = ["winbase","winuser","consoleapi","processenv","wincon", "handleapi"] }
 
 [target.'cfg(unix)'.dependencies]
-libc = "0.2"
+libc = "0.2.43"
 termios = "0.3.0"
 
 [lib]
 name = "crossterm"
 path = "src/lib.rs"
-
-#[[bin]]
-# name = "example_bin"
-# path = "./examples/Crossterm 0.3.1/bin.rs"
 
 [[example]]
 name = "examples"
@@ -36,5 +31,5 @@ name = "logging"
 path = "examples/program_examples/logging.rs"
 
 [[example]]
-name = "duplex"
-path = "examples/program_examples/duplex.rs"
+name = "command_bar"
+path = "examples/program_examples/command_bar.rs"
