--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "crossterm"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["T Post <timonpost@hotmail.nl>"]
 description = "An crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/TimonPost/crossterm"
 documentation = "https://docs.rs/crossterm/"
 license = "MIT"
-keywords = ["console", "color", "cursor", "terminal", "cli"]
+keywords = ["console", "color", "cursor", "input", "terminal"]
 exclude = ["target", "Cargo.lock"]
 readme = "README.md"
 
