--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crossterm"
 version = "0.4.0"
-authors = ["T Post <timonpost@hotmail.nl>"]
+authors = ["T. Post"]
 description = "An crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/TimonPost/crossterm"
 documentation = "https://docs.rs/crossterm/"
