--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ keywords = ["console", "color", "cursor", "input", "terminal"]
 exclude = ["target", "Cargo.lock"]
 readme = "README.md"
 
-[dependencies]
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.5", features = ["winbase","winuser","consoleapi","processenv","wincon", "handleapi","errhandlingapi"] }
+crossterm_winapi = { version =  "0.0.0", git="https://github.com/TimonPost/crossterm_winapi" }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.43"
