--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm"
-version = "0.5.1"
+version = "0.6.0"
 authors = ["T. Post"]
 description = "An crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/TimonPost/crossterm"
@@ -12,7 +12,7 @@ readme = "README.md"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.5", features = ["winbase","winuser","consoleapi","processenv","wincon", "handleapi","errhandlingapi"] }
-crossterm_winapi = { version =  "0.0.0", git="https://github.com/TimonPost/crossterm_winapi" }
+crossterm_winapi = "0.1.0"
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.43"
