--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version =  "0.3.5", features = ["winbase","consoleapi","processenv", "handleapi"] }
+winapi = { version =  "0.3.5", features = ["wincon","winnt","minwindef"] }
 crossterm_winapi = { path = "../crossterm_winapi" }
 
 [dependencies]
