--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -12,11 +12,8 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version =  "0.3.5", features = ["winbase","consoleapi","processenv", "handleapi"] }
+winapi = { version =  "0.3.5", features = ["winnt"] }
 crossterm_winapi = { path = "../crossterm_winapi" }
-
-[target.'cfg(unix)'.dependencies]
-libc = "0.2.43"
 
 [dependencies]
 crossterm_utils = { path = "../crossterm_utils" }
