--- a/crossterm_screen/Cargo.toml
+++ b/crossterm_screen/Cargo.toml
@@ -15,8 +15,5 @@ edition = "2018"
 crossterm_utils = { path = "../crossterm_utils" }
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version =  "0.3.5", features = ["winbase","consoleapi","processenv", "handleapi"] }
+winapi = { version =  "0.3.5", features = ["minwindef", "wincon"] }
 crossterm_winapi = { path = "../crossterm_winapi" }
-
-[target.'cfg(unix)'.dependencies]
-libc = "0.2.43"
