--- a/crossterm_utils/Cargo.toml
+++ b/crossterm_utils/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 crossterm_winapi = { path = "../crossterm_winapi" }
-winapi = { version =  "0.3.5", features = ["winbase","winuser","consoleapi","processenv","wincon", "handleapi","errhandlingapi"] }
+winapi = { version =  "0.3.5", features = ["wincon"] }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.43"
