--- a/crossterm_screen/Cargo.toml
+++ b/crossterm_screen/Cargo.toml
@@ -2,7 +2,7 @@
 name = "crossterm_screen"
 version = "0.1.0"
 authors = ["T. Post"]
-description = "An crossplatform library for raw and alternate screen."
+description = "A cross-platform library for raw and alternate screen."
 repository = "https://github.com/TimonPost/crossterm"
 documentation = "https://docs.rs/crossterm_screen/"
 license = "MIT"
