--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -2,7 +2,7 @@
 name = "crossterm_cursor"
 version = "0.1.0"
 authors = ["T. Post"]
-description = "An crossplatform library for moving the terminal cursor."
+description = "A cross-platform library for moving the terminal cursor."
 repository = "https://github.com/TimonPost/crossterm"
 documentation = "https://docs.rs/crossterm_cursor/"
 license = "MIT"
