--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -2,7 +2,7 @@
 name = "crossterm_input"
 version = "0.1.0"
 authors = ["T. Post"]
-description = "An crossplatform library for reading userinput."
+description = "A cross-platform library for reading userinput."
 repository = "https://github.com/TimonPost/crossterm"
 documentation = "https://docs.rs/crossterm_input/"
 license = "MIT"
