--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -15,6 +15,9 @@ edition = "2018"
 winapi = { version =  "0.3.5", features = ["winnt"] }
 crossterm_winapi = { path = "../crossterm_winapi" }
 
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.43"
+
 [dependencies]
 crossterm_utils = { path = "../crossterm_utils" }
 
