--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -13,10 +13,10 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.5", features = ["wincon","winnt","minwindef"] }
-crossterm_winapi = { path = "../crossterm_winapi" }
+crossterm_winapi = "0.1.1"
 
 [dependencies]
-crossterm_utils = { path = "../crossterm_utils" }
+crossterm_utils = "0.1.0"
 
 [[example]]
 name = "cursor"
