--- a/crossterm_screen/Cargo.toml
+++ b/crossterm_screen/Cargo.toml
@@ -12,8 +12,8 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-crossterm_utils = { path = "../crossterm_utils" }
+crossterm_utils = "0.1.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.5", features = ["minwindef", "wincon"] }
-crossterm_winapi = { path = "../crossterm_winapi" }
+crossterm_winapi = "0.1.1"
