--- a/crossterm_style/Cargo.toml
+++ b/crossterm_style/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm_style"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["T. Post"]
 description = "A cross-platform library styling the terminal output."
 repository = "https://github.com/TimonPost/crossterm"
@@ -13,10 +13,10 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.5", features = ["wincon"] }
-crossterm_winapi = { path = "../crossterm_winapi" }
+crossterm_winapi = "0.1.1"
 
 [dependencies]
-crossterm_utils = { path = "../crossterm_utils" }
+crossterm_utils = "0.1.0"
 
 [[example]]
 name = "style"
