--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.5", features = ["winnt"] }
-crossterm_winapi = "0.1.1"
+crossterm_winapi = { path="../crossterm_winapi" }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.43"
