Fixed broken tests, and corrected public export

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ members = [
     "crossterm_terminal",
     "crossterm_input",
     "crossterm_screen",
+    "examples/program_examples/snake",
+        "examples/program_examples/first_depth_search"
 ]
 
 [dependencies]
@@ -50,3 +52,7 @@ path = "examples/program_examples/logging.rs"
 [[example]]
 name = "command_bar"
 path = "examples/program_examples/command_bar.rs"
+
+[[example]]
+name = "snake"
+path = "examples/program_examples/snake"
