--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,17 @@ members = [
 ]
 
 [dependencies]
-crossterm_screen =   { optional = true, version = "0.1.0" }
-crossterm_cursor =   { optional = true, version = "0.1.0" }
-crossterm_terminal = { optional = true, version = "0.1.0" }
-crossterm_style =    { optional = true, version = "0.2.0" }
-crossterm_input =    { optional = true, version = "0.2.1" }
-crossterm_utils =    { version = "0.1.0" }
+#crossterm_screen =   { optional = true, version = "0.1.0" }
+#crossterm_cursor =   { optional = true, version = "0.1.0" }
+#crossterm_terminal = { optional = true, version = "0.1.0" }
+#crossterm_style =    { optional = true, version = "0.2.0" }
+#crossterm_input =    { optional = true, version = "0.2.1" }
+crossterm_screen =   { optional = true, path = "./crossterm_screen" }
+crossterm_cursor =   { optional = true, path = "./crossterm_cursor" }
+crossterm_terminal = { optional = true, path = "./crossterm_terminal" }
+crossterm_style =    { optional = true, path = "./crossterm_style" }
+crossterm_input =    { optional = true, path = "./crossterm_input" }
+crossterm_utils =    { optional = false, path = "./crossterm_utils" }
 
 [lib]
 name = "crossterm"
