--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,7 @@ crossterm_utils =    { optional = false, path = "./crossterm_utils" }
 name = "crossterm"
 path = "src/lib.rs"
 
-[[example]]
-name="log"
-path="examples/program_examples/logging.rs"
 
-[[example]]
-name="command"
-path="examples/program_examples/command_bar.rs"
+#[[example]]
+#name="command"
+#path="examples/program_examples/command_bar.rs"
