--- a/crossterm_utils/Cargo.toml
+++ b/crossterm_utils/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "crossterm_utils"
 version = "0.2.0"
-authors = ["Timon Post <timonpost@hotmail.nl>"]
-edition = "2018"
+authors = ["T. Post"]
+description = "Common logic used by the crossterm crates."
+repository = "https://github.com/TimonPost/crossterm"
+documentation = "https://docs.rs/crossterm_utils/"
+license = "MIT"
+keywords = ["winapi", "abstractions", "crossterm", "windows", "screen_buffer"]
+exclude = ["target", "Cargo.lock"]
+readme = "README.md"
 
 [target.'cfg(windows)'.dependencies]
-crossterm_winapi = "0.1.1"
+crossterm_winapi = "0.1.2"
 winapi = { version =  "0.3.7", features = ["wincon"] }
 
 [target.'cfg(unix)'.dependencies]
