--- a/crossterm_style/Cargo.toml
+++ b/crossterm_style/Cargo.toml
@@ -16,4 +16,4 @@ winapi = { version =  "0.3.7", features = ["wincon"] }
 crossterm_winapi = "0.1.2"
 
 [dependencies]
-crossterm_utils = { path = "../crossterm_utils" }
+crossterm_utils = "0.2.0"
