Fixed some Bugs. (#118)
- Terminal size Linux was not 0-based.
- Windows mouse input event position was 0-based and should be 1-based
- Result, ErrorKind are made re-exported
- Fixed some special key combination detections for UNIX systems
- Made FreeBSD compile.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm"
-version = "0.9.1"
+version = "0.9.2"
 authors = ["T. Post"]
 description = "An crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/TimonPost/crossterm"
@@ -34,9 +34,9 @@ members = [
 [dependencies]
 crossterm_screen =   { optional = true, version = "0.2.1" }
 crossterm_cursor =   { optional = true, version = "0.2.1" }
-crossterm_terminal = { optional = true, version = "0.2.1" }
+crossterm_terminal = { optional = true, path = "./crossterm_terminal" }
 crossterm_style =    { optional = true, version = "0.3.1" }
-crossterm_input =    { optional = true, version = "0.3.1" }
+crossterm_input =    { optional = true, path = "./crossterm_input" }
 crossterm_utils =    { optional = false, version = "0.2.1" }
 
 [lib]
