--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -16,4 +16,4 @@ winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
 crossterm_winapi = "0.1.2"
 
 [dependencies]
-crossterm_utils = "0.2.1"
+crossterm_utils = { path = "../crossterm_utils" }
