--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ members = [
 [dependencies]
 crossterm_screen =   { optional = true, path = "./crossterm_screen" }
 crossterm_cursor =   { optional = true, path = "./crossterm_cursor" }
-crossterm_terminal = { optional = true, version = "0.2.2" }
+crossterm_terminal = { optional = true, path = "./crossterm_terminal" }
 crossterm_style =    { optional = true, path = "./crossterm_style" }
 crossterm_input =    { optional = true, path = "./crossterm_input" }
 crossterm_utils =    { optional = false, path = "./crossterm_utils" }
