--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -18,5 +18,5 @@ crossterm_winapi = "0.1.2"
 libc = "0.2.51"
 
 [dependencies]
-crossterm_utils = "0.2.1"
-crossterm_cursor = "0.2.1"
+crossterm_utils = {path = "../crossterm_utils"}
+crossterm_cursor = {path = "../crossterm_cursor"}
