--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm_cursor"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["T. Post"]
 description = "A cross-platform library for moving the terminal cursor."
 repository = "https://github.com/TimonPost/crossterm"
@@ -16,4 +16,4 @@ winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
 crossterm_winapi = "0.1.2"
 
 [dependencies]
-crossterm_utils = { path = "../crossterm_utils" }
+crossterm_utils = "0.2.2"
