--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm_terminal"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["T. Post"]
 description = "A cross-platform library for doing terminal related actions."
 repository = "https://github.com/TimonPost/crossterm"
@@ -18,5 +18,5 @@ crossterm_winapi = "0.1.2"
 libc = "0.2.51"
 
 [dependencies]
-crossterm_utils = {path = "../crossterm_utils"}
-crossterm_cursor = {path = "../crossterm_cursor"}
+crossterm_utils = "0.2.2"
+crossterm_cursor = "0.2.2"
