implemented terminal module and started working on examples

--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -18,5 +18,5 @@ crossterm_winapi = "0.1.4"
 libc = "0.2.51"
 
 [dependencies]
-crossterm_utils = "0.2.3"
-crossterm_cursor = "0.2.3"
+crossterm_utils = {path="../crossterm_utils"}
+crossterm_cursor = {path="../crossterm_cursor"}
