--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,11 @@ members = [
 
 [dependencies]
 crossterm_screen =   { optional = true, version = "0.2.3" }
-crossterm_cursor =   { optional = true, version = "0.2.4" }
-crossterm_terminal = { optional = true, version = "0.2.4" }
-crossterm_style =    { optional = true, version = "0.3.3" }
+crossterm_cursor =   { optional = true, path = "./crossterm_cursor" }
+crossterm_terminal = { optional = true, path = "./crossterm_terminal" }
+crossterm_style =    { optional = true, path = "./crossterm_style" }
 crossterm_input =    { optional = true, version = "0.3.6" }
-crossterm_utils =    { optional = false, version = "0.2.3" }
+crossterm_utils =    { optional = false, path = "./crossterm_utils"}
 
 [lib]
 name = "crossterm"
