--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,16 +28,16 @@ members = [
     "crossterm_style",
     "crossterm_terminal",
     "crossterm_input",
-    "crossterm_screen",
+    "crossterm_screen"
 ]
 
 [dependencies]
-crossterm_screen =   { optional = true, version = "0.2.3" }
-crossterm_cursor =   { optional = true, version = "0.2.4" }
-crossterm_terminal = { optional = true, version = "0.2.4" }
-crossterm_style =    { optional = true, version = "0.3.3" }
-crossterm_input =    { optional = true, version = "0.3.6" }
-crossterm_utils =    { optional = false, version = "0.2.3" }
+crossterm_screen =   { optional = true,  path = "./crossterm_screen" }
+crossterm_cursor =   { optional = true,  path = "./crossterm_cursor" }
+crossterm_terminal = { optional = true,  path = "./crossterm_terminal" }
+crossterm_style =    { optional = true,  path = "./crossterm_style" }
+crossterm_input =    { optional = true,  path = "./crossterm_input" }
+crossterm_utils =    { optional = false, path = "./crossterm_utils"}
 
 [lib]
 name = "crossterm"
