--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.7", features = ["winnt", "winuser"] }
-crossterm_winapi = "0.1.4"
+crossterm_winapi = { path="../crossterm_winapi", version = "0.1.4"}
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
