--- a/crossterm_style/Cargo.toml
+++ b/crossterm_style/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.7", features = ["wincon"] }
-crossterm_winapi = "0.1.4"
+crossterm_winapi = { path="../crossterm_winapi", version = "0.1.4"}
 
 [dependencies]
 crossterm_utils = {path="../crossterm_utils"}
