--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-crossterm_winapi = "0.1.4"
+crossterm_winapi = { path="../crossterm_winapi", version = "0.1.4"}
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
