--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
-crossterm_winapi = { path="../crossterm_winapi", version = "^0.1"}
+crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
 
 [dependencies]
-crossterm_utils = { path="../crossterm_utils", version = "^0.2"}
+crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
