--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -13,11 +13,11 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.7", features = ["winnt", "winuser"] }
-crossterm_winapi = { path="../crossterm_winapi", version = "^0.1"}
+crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
 
 [dependencies]
-crossterm_utils = {path="../crossterm_utils", version = "^0.2"}
-crossterm_screen = {path="../crossterm_screen", version = "^0.2"}
+crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
+crossterm_screen = {path="../crossterm_screen", version = "0.2.4"}
