--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,12 @@ members = [
 ]
 
 [dependencies]
-crossterm_screen =   { optional = true,  path = "./crossterm_screen", version = "^0.2" }
-crossterm_cursor =   { optional = true,  path = "./crossterm_cursor", version = "^0.2.5" }
-crossterm_terminal = { optional = true,  path = "./crossterm_terminal", version = "^0.2.5" }
-crossterm_style =    { optional = true,  path = "./crossterm_style", version = "^0.4" }
-crossterm_input =    { optional = true,  path = "./crossterm_input", version = "^0.3" }
-crossterm_utils =    { optional = false, path = "./crossterm_utils", version = "^0.2.4"}
+crossterm_screen =   { optional = true,  path = "./crossterm_screen", version = "0.2.4" }
+crossterm_cursor =   { optional = true,  path = "./crossterm_cursor", version = "0.2.5" }
+crossterm_terminal = { optional = true,  path = "./crossterm_terminal", version = "0.2.5" }
+crossterm_style =    { optional = true,  path = "./crossterm_style", version = "0.4.0" }
+crossterm_input =    { optional = true,  path = "./crossterm_input", version = "0.3.8" }
+crossterm_utils =    { optional = false, path = "./crossterm_utils", version = "0.2.4"}
 
 [lib]
 name = "crossterm"
