--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -12,11 +12,11 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-crossterm_winapi = { path="../crossterm_winapi", version = "^0.1"}
+crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
 
 [dependencies]
-crossterm_utils = {path="../crossterm_utils", version = "^0.2.4"}
-crossterm_cursor = {path="../crossterm_cursor", version = "^0.2"}
+crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
+crossterm_cursor = {path="../crossterm_cursor", version = "0.2.5"}
