--- a/crossterm_style/Cargo.toml
+++ b/crossterm_style/Cargo.toml
@@ -17,3 +17,4 @@ crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
 
 [dependencies]
 crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
+serde = { version = "1.0.0", features = ["derive"], optional = true }
