--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ members = [
     "crossterm_screen"
 ]
 
+exclude = [
+    "examples/program_examples"
+]
+
 [dependencies]
 crossterm_screen =   { optional = true,  path = "./crossterm_screen", version = "0.2.4" }
 crossterm_cursor =   { optional = true,  path = "./crossterm_cursor", version = "0.2.5" }
