--- a/.github/workflows/crossterm_build.yml
+++ b/.github/workflows/crossterm_build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2019]
+        os: [ubuntu-latest, windows-2019, macOS-10.14]
         rust: [stable, nightly]
     steps:
     - uses: hecrj/setup-rust-action@master
@@ -19,3 +19,7 @@ jobs:
     - uses: actions/checkout@master
     - name: Run Build
       run: cargo build
+    - name: Check Examples
+      run: cargo check --examples 
+    - name: Run Tests
+      run: cargo test -v
