Replace env.matrix with env.global
Signed-off-by: Robert Vojta <rvojta@me.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
       env: TEST_EXCLUDE=""
 
 env:
-  matrix:
+  global:
     - TEST_EXCLUDE="--exclude crossterm_winapi"
 
 before_script:
