--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ script:
   - cargo fmt --version
   - rustup --version
   - rustc --version
-  - cargo fmt --all -- --check
+  - if [ "$TRAVIS_RUST_VERSION" = "stable" ]; then cargo fmt --all -- --check; fi
   - cargo build
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then cargo test --all -- --nocapture --test-threads 1; else cargo test --all --exclude crossterm_winapi -- --nocapture --test-threads 1; fi
