Execute all tests on CI + warnings/errors cleanup (#216)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,31 @@
 # Set up the Rust toolchain.
 language: rust
+
 rust:
   - stable
-
-before_script:
-  - export PATH=$PATH:/home/travis/.cargo/bin
-  - rustup component add rustfmt-preview
+  - nightly
 
 os:
   - linux
-  - osx
   - windows
+  - osx
+
+git:
+  depth: 1
+  quiet: true
+
+matrix:
+  allow_failures:
+    - rust: nightly
+
+before_script:
+  - export PATH=$PATH:/home/travis/.cargo/bin
+  - rustup component add rustfmt
 
 script:
+  - cargo fmt --version
+  - rustup --version
+  - rustc --version
+  - if [ "$TRAVIS_RUST_VERSION" = "stable" ]; then cargo fmt --all -- --check; fi
   - cargo build
-  - cargo fmt -- --check
-  - cargo test -- --nocapture --test-threads 1
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then cargo test --all -- --nocapture --test-threads 1; else cargo test --all --exclude crossterm_winapi -- --nocapture --test-threads 1; fi
