--- a/examples/program_examples/first_depth_search/Cargo.toml
+++ b/examples/program_examples/first_depth_search/Cargo.toml
@@ -2,10 +2,10 @@
 name = "first_depth_search"
 version = "0.1.0"
 authors = ["TimonPost <timonpost@hotmail.nl>"]
+edition = "2018"
 
 [dependencies]
 rand = "0.4.2"
 
 [dependencies.crossterm]
 path = "../../../"
-branch = "master"
