snake example -> 2018 edition
Signed-off-by: Robert Vojta <rvojta@me.com>

--- a/examples/program_examples/snake/Cargo.toml
+++ b/examples/program_examples/snake/Cargo.toml
@@ -2,6 +2,7 @@
 name = "snake"
 version = "0.1.0"
 authors = ["TimonPost <timonpost@hotmail.nl>"]
+edition = "2018"
 
 [dependencies]
 rand = "0.4.2"
